Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30404

Qt Creator Android Setup Wizard installs wrong platform, sdk, and tools version, and ndk

XMLWordPrintable

    • Android
    • ea26cd13b (13.0), 97187d4a5 (master)
    • 2024wk08FOQtforAndroid

      While testing qt 6.7 beta 1 on Windows, when pressing the setup SDK button in Qt Creator, i get ndk 25 instead of ndk 26 and platform tools 31 instead of the 33. 

      the process of getting this information from the Qt for Android build was automated in QTBUG-108292

        1. Core.json
          0.5 kB
          Nicholas Bennett
        2. image-2024-02-05-10-51-42-253.png
          113 kB
          Nicholas Bennett
        3. image-2024-02-05-13-17-07-651.png
          24 kB
          Nicholas Bennett
        For Gerrit Dashboard: QTCREATORBUG-30404
        # Subject Branch Project Status CR V

            assam Assam Boudjelthia
            nick_bennett Nicholas Bennett
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes