Android: get essential platforms and build-tools packages from BuiltWith

The commit 1180d5b8a270cfe7bd1c501c892d1c38ee7425de added information
about the ndk and android api level used at build time, ndk version has
already been accounted for in b73d6f3be80461f7e72326d622a07f8d2dfee10e.
This now accounts for "platforms;android-xx" and "build-tools;xx.x.x"
packages.

Fixes: QTCREATORBUG-30404
Change-Id: I78b8885b88294404bc29c41a7b9491a331fcd709
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>